# src/modules/users/users.routes.ts
@@ -99,6 +99,14 @@ export const initializeUsersRouter = (customController?: UsersController) => {
         #swagger.tags = ['Users']
         #swagger.path =  '/users/login'
         #swagger.description = 'user login'
+         #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: { $ref: "#/components/schemas/login" }
+                }
+            }
+        }
         */
         controller.login.bind(controller)
     )
